<resources>
    <string name="app_name">Geolaxia</string>

    <!-- Strings related to login -->
    <string name="username">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="email">Email</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="facebook_sign_in">Iniciar Sesión con Facebook</string>
    <string name="facebook_app_id">1736737786618884</string>
    <string name="action_register">Registrarse</string>
    <string name="register_text">¿No estas registrado?</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">El campo es requerido</string>
    <string name="title_activity_register">Regsitrarse</string>
    <string name="password_not_match">El valor debe coincidir con el campo contraseña</string>
    <string name="title_activity_home">Geolaxia</string>
    <string name="openDrawer">Abrir menu</string>
    <string name="closeDrawer">Cerrar menu</string>
    <string name="title_activity_attack">Ataque</string>
    <string name="title_activity_attack_by_coordinates">Buscar por Coordenadas</string>
    <string name="title_activity_launch_attack">LaunchAttackActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
<<<<<<< HEAD
    <string name="title_activity_constructions">ConstructionsActivity</string>
=======
    <string name="country_prompt">Choose a country</string>
    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
>>>>>>> 15209a9642512e6e93f3e659d0882d8bf0353eb2
</resources>
